build_log.txt
> Task :FtcRobotController:preBuild UP-TO-DATE
> Task :FtcRobotController:preDebugBuild UP-TO-DATE
> Task :FtcRobotController:generateDebugBuildConfig
> Task :FtcRobotController:generateDebugResValues UP-TO-DATE
> Task :FtcRobotController:generateDebugResources UP-TO-DATE
> Task :FtcRobotController:packageDebugResources UP-TO-DATE
> Task :FtcRobotController:parseDebugLocalResources UP-TO-DATE
> Task :FtcRobotController:generateDebugRFile UP-TO-DATE
> Task :FtcRobotController:javaPreCompileDebug UP-TO-DATE

> Task :FtcRobotController:compileDebugJavaWithJavac
Note: C:\Users\dylen\Projects\JULES-app\JULES4FTC\FtcRobotController\src\main\java\org\firstinspires\ftc\robotcontroller\internal\FtcRobotControllerActivity.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.

> Task :TeamCode:preBuild UP-TO-DATE
> Task :TeamCode:preDebugBuild UP-TO-DATE
> Task :TeamCode:javaPreCompileDebug UP-TO-DATE
> Task :FtcRobotController:compileDebugLibraryResources UP-TO-DATE
> Task :FtcRobotController:writeDebugAarMetadata UP-TO-DATE
> Task :TeamCode:checkDebugAarMetadata UP-TO-DATE
> Task :TeamCode:generateDebugResValues UP-TO-DATE
> Task :TeamCode:mapDebugSourceSetPaths UP-TO-DATE
> Task :TeamCode:generateDebugResources UP-TO-DATE
> Task :TeamCode:mergeDebugResources UP-TO-DATE
> Task :TeamCode:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :FtcRobotController:extractDeepLinksDebug UP-TO-DATE
> Task :FtcRobotController:processDebugManifest UP-TO-DATE
> Task :TeamCode:extractDeepLinksDebug UP-TO-DATE
> Task :TeamCode:processDebugMainManifest UP-TO-DATE
> Task :TeamCode:processDebugManifest UP-TO-DATE
> Task :TeamCode:processDebugManifestForPackage UP-TO-DATE
> Task :FtcRobotController:bundleLibCompileToJarDebug
> Task :TeamCode:processDebugResources UP-TO-DATE

> Task :TeamCode:compileDebugJavaWithJavac FAILED
C:\Users\dylen\Projects\JULES-app\JULES4FTC\TeamCode\src\main\java\org\firstinspires\ftc\teamcode\jules\core\JulesRobot.java:105: error: no suitable constructor found for Follower(HardwareMap)
                    follower = new Follower(hardwareMap);
                               ^
    constructor Follower.Follower(FollowerConstants,Localizer,Drivetrain,PathConstraints) is not applicable
      (actual and formal argument lists differ in length)
    constructor Follower.Follower(FollowerConstants,Localizer,Drivetrain) is not applicable
      (actual and formal argument lists differ in length)
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
1 error

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':TeamCode:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 1s
26 actionable tasks: 4 executed, 22 up-to-date
